<resources>
    <string name="app_name">Домашка</string>
    <string name="hello_toast">Hello toast</string>
    <string name="change_fragment">Change Fragment</string>
    <string name="toast">toast</string>
    <string name="zero">zero</string>
    <string name="count">count</string>
    <string name="next">next</string>
    <string name="article_title">
Как тратить на путешествия меньше, а летать чаще. Лайфхаки от Тинькофф</string>
    <string name="article_title2"> ШАРПЕЙ</string>
    <string name="article_title3"> Женский день 8 марта: как он появился и зачем он нужен? 7 неочевидных фактов</string>
    <string name="article_subtitle">Тратьте грамотно</string>
    <string name="article_subtitle2">ИСТОРИЯ ПОРОДЫ ШАРПЕЙ</string>
    <string name="article_subtitle3">С чего все началось?</string>
    <string name="article_text">
        Больше информации на https://zen.yandex.ru/media/tinkoff/kak-tratit-na-puteshestviia-menshe-a-letat-chasce-laifhaki-ot-tinkoff-61644b56658ee010f1b1e4e5
        \n\n
ALL Airlines на то и ALL, что мили капают вообще за все покупки.
        Потратили вы с карты 100 рублей — пришли две мили. Но можно копить и быстрее, пользуясь предложениями партнеров Тинькофф.
        \n\n
        <b>За покупку авиабилетов — вернется до 7% от стоимости.</b> Максимум получите, если будете брать на сайте Тинькофф Путешествий. Это агрегатор, здесь собраны билеты разных компаний, без наценок и комиссий.
        А если пойдете сразу на сайты авиакомпаний — «Аэрофлота», «Победы», «Уральских авиалиний», Altair и S7 Airlines — <b>вернете 2% милями.</b>
        \n\n
        На Тинькофф Путешествиях можно бронировать туры и ж/д билеты.
        После этого на карту <b>придет 5% милями.</b> А если на этом же сайте возьмете отель или авто в аренду,<b> вернется целых 10%</b>
        \n\n
        Мы посчитали: если не покупать у партнеров вообще ничего, можно копить по 6 тысяч миль в год, тратя всего 25 тысяч рублей с карты. С партнерами, конечно, удобнее.
        \n\n
<b>Используйте неочевидные варианты выгоды</b>
        \n\n
Это лайфхак для любителей сложных схем и владельцев нескольких карт Тинькофф. Можно сочетать кредитку ALL Airlines и дебетовку Tinkoff Black и получать больше выгоды.
        \n\n
        Если пользоваться только дебетовкой, а с кредитки иногда что-то покупать, то мили будут накапливаться ну очень медленно. Поэтому лучше тратить деньги в основном с кредитки, а дебетовкой закрывать долг. Это легче, чем кажется.
        \n\n
        У ALL Airlines есть грейс-период до 55 дней: в течение этого времени можно тратить сколько угодно денег, а проценты капать не будут. Получается, можно использовать кредитку как основную карту и тратить все деньги с нее, а с дебетовки просто пополнять, гася долг. Главное — успеть в грейс-период, чтобы ненароком не попасть на проценты. И ура: мили копятся, а лишнего банку платить не надо.
        \n\n
    </string>
    <string name="article_text2">\n\n
    Первые сведения о собаках, похожих на современных шарпеев, датируются 206 годом до нашей эры. Это начало правления в Китае династии Хань. В период расцвета Ханьской Империи шарпеи были очень популярны – фигурки собак с «гиппопотамьей» мордой находят в гробницах тех времен. В то время шарпеи несли, в основном, охранную службу. Есть предположение, что тогда они были значительно крупнее.
    \n\n
    Позднее шарпеи стали бойцовыми собаками. В городке Тай Ли, близ современного Гуанчжоу, крестьяне использовали предков шарпеев для боев. Толстая складчатая кожа помогала спастись от серьезных ранений, но агрессивности этим собакам недоставало: только серьезно раздразнив шарпея, можно было рассчитывать на успех в бою. Карьера бойцовых собак для шарпеев длилась, к счастью, недолго.
    \n\n
    Использовали породу и для охоты на крупного зверя – волка, вепря, крупных кошек, и для охраны домашнего скота от хищников.
    \n\n
    В XX веке с приходом к власти Мао Цзэдуна шарпеи в Китае стали не нужны. Они считались атрибутами мещанской жизни и постепенно оказались на грани вымирания. Несколько особей осталось на острове Тайвань и в провинции Макао.
    \n\n
    В 1966 году первые шарпеи через Гонконг попали в США, где вызвали бурный интерес собаководов-любителей. В 1971 году они были зарегистрированы как китайские бойцовые собаки. В начале 1970 годов была развернута целая кампания по спасению породы. Любители скрещивали их с похожими собаками, прибегали к инбридингу, отбирали наиболее удачных особей для племенной работы. В 1976 году в США зарегистрировали первый официальный стандарт собак породы шарпей.</string>
    <string name="article_text3">\n\n
    Как и 1 Мая, праздник 8 марта вырос из рабочего движения и имеет американские корни.
    \n\n
    В 1908 году 15 тысяч женщин в Нью-Йорке вышли на демонстрацию, требуя сокращения рабочего дня, увеличения зарплаты и права голоса (в большинстве штатов женщины обрели его в 1920 году, когда была принята 19-я поправка к Конституции США). На следующий год Американская социалистическая партия предложила сделать последнее воскресенье февраля Днем трудящихся женщин.
    \n\n
    В августе 1910 года известная деятельница германской социал-демократии Клара Цеткин на конференции в Копенгагене предложила учредить Международный день борьбы за женское равноправие и эмансипацию.
    \n\n
    Около ста участниц из 17 стран поддержали идею единогласно.
    \n\n
    В 1911 году его впервые отметили в Германии, Австро-Венгрии, Дании и Швейцарии.
    </string>
    <string name="send">send</string>
    <string name="message_received">Message Received</string>
    <string name="editText">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="say_hello">Say hello</string>
    <string name="hello">Hello!</string>
    <string name="enter_text">Введите текст</string>
    <string name="website">http://developer.android.com</string>
    <string name="open_website">open Website</string>
    <string name="golden_gate_bridge">Golden Gate Bridge</string>
    <string name="shared_text">\'Twas brillig and the slithy toves</string>
    <string name="first_button">first button</string>
    <string name="second_button">second button</string>
    <string name="third_button">third button</string>
    <string name="choose_a_product">choose a product</string>
    <string name="enter_product_name">enter product name</string>
    <string name="search">Search</string>
    <string name="enter_product_shop">enter product shop</string>
    <string name="take_a_photo">take a photo</string>
    <string name="open_location">open location</string>
    <string name="share_this_text">share this text</string>

</resources>