<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/wedsiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website" />

    <Button
        android:id="@+id/wedsiteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_website" />

    <EditText
        android:id="@+id/locEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/golden_gate_bridge" />

    <Button
        android:id="@+id/locButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_location" />

    <EditText
        android:id="@+id/shareEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_text" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_this_text" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/take_a_photo" />

</LinearLayout>