<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_regular"
            android:text="@string/article_subtitle"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/articleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/article_text" />

                <Button
                    android:id="@+id/changeToNextFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/next" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>