<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="1."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="2."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="3."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="4."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="5."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="6."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="7."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="8."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="9."
        android:padding="10dp" />

    <TextView
        android:id="@+id/item10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="10."
        android:padding="10dp" />

    <Button
        android:id="@+id/chooseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_product" />

    <EditText
        android:id="@+id/searchProductEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_product_shop" />

    <Button
        android:id="@+id/searchProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />


</LinearLayout>